finish user service logic implementation.